--- a/wp-content/vpdb/comments/DB/DBEFBF0ABEFD4ECABA843C53463F8CDE.ini
+++ b/wp-content/vpdb/comments/DB/DBEFBF0ABEFD4ECABA843C53463F8CDE.ini
@@ -9,9 +9,11 @@ comment_content = "Hi, this is a comment.
 To get started with moderating, editing, and deleting comments, please visit the Comments screen in the dashboard.
 Commenter avatars come from <a href=\"https://gravatar.com\">Gravatar</a>."
 comment_karma = "0"
-comment_approved = "1"
+comment_approved = "trash"
 comment_agent = ""
 comment_type = ""
 vp_comment_post_ID = "7AFFF2A942024E3DA8E8208CEFAF2D38"
 vp_user_id = 0
 vp_comment_parent = 0
+_wp_trash_meta_status#9EE0471603A1415EB4C37209B2032EB0 = "1"
+_wp_trash_meta_time#F4E2AA70C5684F239D8AC0B246C9B642 = "1499974906"
